<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="Email"
        android:layout_height="wrap_content" />




    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:text="Password"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/bLogin"
        android:text="Login"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <Button
        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:text="Register Here"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />




</LinearLayout>
