<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="something_goes_here.org"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.des.studentmanagerredux.HomeScreen">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp">

        <Button
            android:text="Calendar"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="sendMessageCalendar"
            android:textColor="@android:color/holo_blue_dark"/>

        <Button
            android:text="To-Do List"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:id="@+id/button19"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="sendMessageToDo"
            android:textColor="@android:color/holo_green_light"/>

        <Button
            android:text="Password Manager"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:id="@+id/button14"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="sendMessagePasswordManager"
            android:textColor="@android:color/holo_orange_light"/>

        <Button
            android:text="GPA Calculator"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:id="@+id/button18"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="sendMessageGPACalculator"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </GridLayout>

    <TextView
        android:text="Student Manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="22sp"
        android:typeface="sans"
        android:fontFamily="serif"
        android:textStyle="normal|bold"
        android:layout_below="@+id/button20"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button20"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessageLogout"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="75dp"
        app2:srcCompat="@drawable/img_0598"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recent_events"/>
    </LinearLayout>

</RelativeLayout>
